# av

./: CMakeLists.txt  QUICK_REFERENCE.md  README.md  conanfile.txt
assets/configs/: simulation_config.json
assets/maps/: simple_city.json
benchmarks/: CMakeLists.txt  benchmark_main.cpp
docs/: PHASE2_RENDERING_COMPLETE.md  PHASE3_WORLD_COMPLETE.md  PHASE4_LIDAR_COMPLETE.md  PHASE5_CAMERA_COMPLETE.md  PHASE6_SENSORS_COMPLETE.md  PHASE_1_PROGRESS.md
examples/: phase2_rendering_demo.cpp
include/av/control/: pid_controller.hpp  pure_pursuit.hpp  trajectory_tracker.hpp
include/av/foundation/: clock.hpp  config.hpp  geometry.hpp  logging.hpp  math.hpp  transform.hpp
include/av/perception/: lane_detector.hpp  object_detector.hpp  object_tracker.hpp  perception_system.hpp  sensor_fusion.hpp
include/av/physics/: physics_world.hpp  vehicle_controller.hpp  vehicle_dynamics.hpp
include/av/planning/: behavior_planner.hpp  collision_checker.hpp  global_planner.hpp  local_planner.hpp  trajectory_generator.hpp
include/av/rendering/: camera.hpp  debug_renderer.hpp  imgui_helper.hpp  mesh.hpp  renderer.hpp  scene.hpp  shader.hpp  window.hpp
include/av/sensors/: camera.hpp  gps.hpp  imu.hpp  lidar.hpp  lidar_visualizer.hpp  odometry.hpp  radar.hpp  sensor.hpp  sensor_manager.hpp  ultrasonic.hpp
include/av/simulation/: data_recorder.hpp  scenario.hpp  simulator.hpp
include/av/world/: road_network.hpp  traffic.hpp  world.hpp  world_loader.hpp  world_renderer.hpp
scripts/: build.sh
src/: main.cpp
src/control/: CMakeLists.txt
src/foundation/: CMakeLists.txt  logging.cpp
src/perception/: CMakeLists.txt
src/physics/: CMakeLists.txt  physics_world.cpp  vehicle_controller.cpp  vehicle_dynamics.cpp
src/planning/: CMakeLists.txt
src/rendering/: CMakeLists.txt  camera.cpp  debug_renderer.cpp  imgui_helper.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  window.cpp
src/sensors/: CMakeLists.txt  camera.cpp  gps.cpp  imu.cpp  lidar.cpp  lidar_visualizer.cpp  odometry.cpp  radar.cpp  sensor.cpp  sensor_manager.cpp  ultrasonic.cpp
src/simulation/: CMakeLists.txt  simulator.cpp
src/world/: CMakeLists.txt  road_network.cpp  traffic.cpp  world.cpp  world_loader.cpp  world_renderer.cpp
tests/: CMakeLists.txt
tests/foundation/: test_geometry.cpp  test_math.cpp  test_transform.cpp
tests/physics/: test_physics.cpp
tests/rendering/: test_rendering.cpp
tests/sensors/: test_camera.cpp  test_lidar.cpp  test_phase6_sensors.cpp
tests/world/: test_world.cpp
